--- a/frontend/src/stylesheets/components/_resourceCard.scss
+++ b/frontend/src/stylesheets/components/_resourceCard.scss
@@ -1,12 +1,16 @@
 .resourceBox {
   display: flex;
   flex-direction: row;
-  padding: 30px 0;
+  padding: 18px 0;
   gap: 12px;
 }
 
 .resourceContent {
   flex: 1;
+}
+
+.resourceContent button {
+  margin-top: 6px;
 }
 
 .resourceIcon {
